<resources>
    <string name="app_name">LocationChecker</string>
    <string name="geo_point_hint">Geo point</string>
    <string name="radius_hint">Radius</string>
    <string name="network_name_hint">Network name</string>
    <string name="geo_point_latitude_hint">Latitude</string>
    <string name="geo_point_longtitude_hint">Longtitude</string>
    <string name="in_range">In Range</string>
    <string name="not_in_ranage">Not in range</string>
    <string name="undefined">Undefined</string>
    <string name="gps_range">GPS range: </string>
    <string name="gps_point">GPS location: </string>
    <string name="current_status">Current status: </string>
    <string name="wifi_range">Wifi range: </string>
</resources>
