<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="testtask.slatestudio.locationchecker.MainActivity">

    <TextView
        android:id="@+id/is_in_range_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/current_status" />

    <TextView
        android:id="@+id/is_in_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/undefined" />

    <TextView
        android:id="@+id/wifi_zone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/wifi_range" />

    <TextView
        android:id="@+id/wifi_zone_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/undefined" />

    <TextView
        android:id="@+id/gps_point_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/gps_point" />

    <TextView
        android:id="@+id/gps_point_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/undefined" />

    <TextView
        android:id="@+id/gps_in_range_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/gps_range" />

    <TextView
        android:id="@+id/gps_in_range_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/undefined" />

    <EditText
        android:id="@+id/geo_point_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/geo_point_latitude_hint"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/geo_point_longtitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/geo_point_longtitude_hint"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/radius_hint"
        android:inputType="number"
        android:maxLength="5"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/network_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/network_name_hint"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>

